Linkify original link in blog post

--- a/_posts/2016-07-20-xtermjs-1-0.md
+++ b/_posts/2016-07-20-xtermjs-1-0.md
@@ -44,4 +44,4 @@ If you are developing an application that could use a terminal (or terminal emul
 
 Want to learn more about what xterm.js is capable of? Go to <a href="https://www.sourcelair.com">www.sourcelair.com</a>, create a project (or open an existing one) to test all of its features thoroughly in your project’s fully featured Linux terminal.
 
-> This blog article was originally posted at https://www.sourcelair.com/blog/articles/125/xterm-js-1-0.
+> This blog article was originally posted at [https://www.sourcelair.com/blog/articles/125/xterm-js-1-0](https://www.sourcelair.com/blog/articles/125/xterm-js-1-0).
