--- a/_posts/2016-10-03-xtermjs-2.0.md
+++ b/_posts/2016-10-03-xtermjs-2.0.md
@@ -10,13 +10,15 @@ We are excited to announce a new major update for xterm.js; **<a href="https://g
 2. Migration of code base to ES2015 modules to make development much easier
 3. Significant features and improvements
 
-Let's take a quick look on each one of this updates
+Let's take a quick look on each one of this updates.
 
 ## Project website
-Xterm.js definitely deserved it's own place in the web, so we gifted [xtermjs.org](http://xtermjs.org) to it! Here you can find the official [docs](/docs/) for the public API of the project, including some more high-level guides and a [blog](/blog/), where we will post articles about xterm.js, like releases, presentations, engineering etc.
+Xterm.js definitely deserved it's own place in the web, so we gifted [xtermjs.org](http://xtermjs.org) to it! Here you can find the official [docs](/docs/) for the public API of the project, including some high-level guides and a [blog](/blog/), where we will post articles about xterm.js, like releases, presentations, engineering etc.
+
+**⚠️  Attention:** From now on, our public API is only the one documented in [http://xtermjs.org/docs/](http://xtermjs.org/docs/). Any other attributes, methods or events that you might be relying in previous versions should not be considered stable and might change without notice!
 
 ## Migration to ES2015
-Xterm.js used to be a huge monolith and it was a real pain to develop it, especially when dealing with core parts like rendering. We decided to take a big step forward, break the code base into multiple native ES2015 modules and ship xterm.js as a UMD monolith which can be imported using either native modules, CommonJS, RequireJS or no module system at all!
+Xterm.js used to be a huge monolith and it was a real pain to work on, especially when dealing with core parts like rendering. We decided to take a big step forward, break the code base into multiple native ES2015 modules and ship xterm.js as a [UMD](https://github.com/umdjs/umd) monolith which can be imported using either native modules, CommonJS, RequireJS or no module system at all!
 
 This will allow us to develop xterm.js faster, with less hassle and friction and at the end ship a better open source project to the world.
 
@@ -33,8 +35,9 @@ To learn more about how to import xterm.js properly into your project, take a lo
 Xterm.js 2.0 ships with a few great improvements:
 
 - New APIs to [get](http://xtermjs.org/docs/api/Terminal/#getoptionkey) and [set](http://xtermjs.org/docs/api/Terminal/#setoptionkey-value) terminal options
+- New API to [clear](http://xtermjs.org/docs/api/Terminal/#clear) terminal
 - Better mouse and mouse wheel support
-- Improved scrolling in curses-based applications (e.g. Vim)
+- Improved scrolling in oh-my-zsh
 
 As always, this release could not be made possible without the contribution of our [**amazing contributors**](https://github.com/sourcelair/xterm.js/blob/2.0.1/AUTHORS), so **THANK YOU** for making this happen!
 
