Add open graph data

--- a/_posts/2016-07-20-xtermjs-1-0.md
+++ b/_posts/2016-07-20-xtermjs-1-0.md
@@ -1,6 +1,7 @@
 ---
 title:  Announcing xterm.js 1.0
 author: parisk
+author_twitter: pariskasid
 categories: xtermjs update
 ---
 
@@ -30,7 +31,7 @@ Since May 2016 the terminal of Jupyter Notebook’s JavaScript UI is powered by 
 
 ### <a href="https://gitlab.com" target="_blank">GitLab</a>
 
-GitLab ported xterm.js to CoffeeScript to improve its terminal emulation. GitLab is free and open source software that provides Git repository management, code reviews, issue tracking, activity feeds and wikis. 
+GitLab ported xterm.js to CoffeeScript to improve its terminal emulation. GitLab is free and open source software that provides Git repository management, code reviews, issue tracking, activity feeds and wikis.
 
 ## Download xterm.js
 
