--- a/_posts/2016-10-03-xtermjs-2.0.md
+++ b/_posts/2016-10-03-xtermjs-2.0.md
@@ -1,7 +1,9 @@
 ---
 title:  Announcing xterm.js 2.0
 author: parisk
+author_twitter: pariskasid
 categories: xtermjs update
+excerpt: We are excited to announce xterm.js 2.0! Rewritten in ES2015 with better scrolling and mouse support!
 ---
 
 We are excited to announce a new major update for xterm.js; **<a href="https://github.com/sourcelair/xterm.js" target="_blank">xterm.js 2.0</a>**! This new release includes the following great updates:
