--- a/_posts/2016-11-10-xtermjs-2.1.md
+++ b/_posts/2016-11-10-xtermjs-2.1.md
@@ -6,17 +6,17 @@ categories: xtermjs update
 excerpt: We are excited to announce xterm.js 2.1 with all-new scrolling API, Terminado support and more!
 ---
 
-We are announcing **<a href="https://github.com/sourcelair/xterm.js" target="_blank">xterm.js 2.1</a>**! Below you can find some the most important updates of this release.
+Today we are announcing **<a href="https://github.com/sourcelair/xterm.js" target="_blank">xterm.js 2.1</a>**! Below you can find some of the most important updates of this release.
 
 ## 🆕 All-new scrolling API
-In addition to line scrolling, we are introducing a few higher level methods, that let you manipulate scrolling with more ease:
+In addition to line scrolling, we are introducing a few higher level methods, that give you finer-grained control on how much you want to scroll:
 
 - [`scrollPages(n)`](/docs/api/Terminal/#scrollpagesn): Scrolls viewport down by `n` pages (or scrolls up if `n` is negative)
 - [`scrollToTop()`](/docs/api/Terminal/#scrolltotop): Scrolls the terminal to the top of the buffer
 - [`scrollToBottom()`](/docs/api/Terminal/#scrolltobottom): Scrolls the terminal to the bottom of the buffer.
 
 ## 🆕 Terminado addon
-In this release we included a new [Terminado](http://terminado.readthedocs.io/en/latest/) addon. Terminado exposes back-end terminals via a WebSocket protocol. To learn how you can hook an xterm.js front-end to a Terminado back-end take a look at our [Connecting to Terminado](/docs/guides/terminado/) guide  or to the source code of the [`terminado`](https://github.com/sourcelair/xterm.js/blob/2.1.0/addons/terminado/terminado.js) addon.
+In this release we included a new [Terminado](http://terminado.readthedocs.io/en/latest/) addon. Terminado exposes back-end terminals via a WebSocket protocol. To learn how you can hook an xterm.js front-end to a Terminado back-end take a look at our [Connecting to Terminado](/docs/guides/terminado/) guide or at the source code of the [`terminado`](https://github.com/sourcelair/xterm.js/blob/2.1.0/addons/terminado/terminado.js) addon.
 
 ## IME improvements
 We bundled multiple improvements to our IME support in this release, as it is one of xterm.js' most important features. In more details:
@@ -26,7 +26,7 @@ We bundled multiple improvements to our IME support in this release, as it is on
 - IME position is correct and stabilized when active ([#323](https://github.com/sourcelair/xterm.js/pull/323))
 
 ## Right-click, copy and paste improvements
-Getting right-click and clipboard manipulation right across all major browser is a tough task. In this release we did great progress towards this, with the following updates:
+Getting right-click and clipboard manipulation right across all major browser is a tough task. In this release we made some great progress towards this, with the following updates:
 
 - Fix right-click when no selection has been instantiated ([#332](https://github.com/sourcelair/xterm.js/pull/332))
 - Fix copy and paste on Internet Explorer ([#339](https://github.com/sourcelair/xterm.js/pull/339), [#334](https://github.com/sourcelair/xterm.js/pull/334))
@@ -42,4 +42,4 @@ We would like to thank and credit all of external contributors for their work on
 - <a href="https://github.com/IanLewis"> <img class="avatar mr-2" src="https://github.com/IanLewis.png?s=32" /> IanLewis</a> for [adding the `main` field in owr `bower.json` file](https://github.com/sourcelair/xterm.js/pull/337)
 - <a href="https://github.com/hiro-su"> <img class="avatar mr-2" src="https://github.com/hiro-su.png?s=32" /> hiro-su</a> for fixing [copy](https://github.com/sourcelair/xterm.js/pull/339), [paste](https://github.com/sourcelair/xterm.js/pull/334) and [right-click paste](https://github.com/sourcelair/xterm.js/pull/345) on Internet Explorer
 
-Xterm.js 2.1 is available at [npm](http://npmjs.org/package/xterm), [bower](https://bower.io) and [GitHub Releases](https://github.com/sourcelair/xterm.js/releases/tag/2.1.0) as usual, so go get it and create amazing terminal apps now!
+Xterm.js 2.1 is available on [npm](http://npmjs.org/package/xterm), [bower](https://bower.io) and [GitHub Releases](https://github.com/sourcelair/xterm.js/releases/tag/2.1.0) as usual, so go get it and start creating amazing terminal apps now!
