--- a/_posts/2017-02-08-xtermjs-2.3.md
+++ b/_posts/2017-02-08-xtermjs-2.3.md
@@ -14,24 +14,24 @@ The speed of xterm.js has been improved significantly this release due to optimi
 ![Performance demo](/images/2017-02-08-xtermjs-2.3/performance-demo.gif)
 
 ### Buffer management
-Previously when the terminal's buffer was filled it would be chopped in half to make room for more data, this is why there was some [quirky behavior](https://github.com/sourcelair/xterm.js/issues/361) with the scroll bar when a lot of output was processed. Now the buffer is managed in a circular list which makes it both faster from a memory and CPU perspective.
+Previously when the terminal's buffer was filled it would be chopped in half to make room for more data, this is why there was some [quirky behavior](https://github.com/sourcelair/xterm.js/issues/361) with the scroll bar when a lot of output was processed. Now the buffer is managed in a circular list which makes it faster from both a memory and CPU perspective.
 
 A bonus that came from this is that scroll events are no longer fired on every new line when the buffer is full since no scroll actually happens anymore since the viewport stays in the same position.
 
 ### Renderer optimizations
-The renderer saw huge improvements. All DOM interactions are now performed asynchronously on [animation frames](https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame), meaning frames will only be performed at most 60 times per second (most browsers). Additional frame skipping is also used to skip frames when the renderer knows more writes are in the write queue, this saved CPU cycles that could be better used by the parser. Other improvements
+The renderer saw huge improvements. All DOM interactions are now performed asynchronously in [animation frames](https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame), meaning the DOM will only be updated at most 60 times per second (most browsers). Additional frame skipping is also used to skip frames when the renderer knows more writes are pending in the write queue, this saves CPU cycles that could be better used by the parser. Other improvements:
 
-- Minimizing forced layouts by limiting usage of `getBoundingClientRect`.
-- Added *experimental* flow control support via the `useFlowControl` option which will allow xterm.js to tell the pty to pause (XOFF signal) and resume (XON signal), when this is enabled ctrl+c (`SIGINT`) should be more responsive and commands like `time` should be more accurate as xterm.js and the backing pty is synced. This is disabled by default and note that support is limited beyond `bash`.
+- Minimizing forced layouts by limiting usage of things like `getBoundingClientRect`.
+- Added *experimental* flow control support via the `useFlowControl` option which will allow xterm.js to tell the pty to pause (XOFF signal) and resume (XON signal). When this is enabled ctrl+c (`SIGINT`) should be more responsive and commands like `time` should be more accurate as xterm.js and the backing pty are synced. Note that this is disabled by default and shell support appears to be limited outside of `bash`.
 
 ### Parser optimizations
-Parsing is now performed in chunks and asynchronously instead of all at once synchronously, this means no more parser-based lock ups. The parser itself was also optimized by converting the majority of the switch statements (*O(n)*) to be instead be driven by maps (*O(1)*).
+Parsing is now performed in chunks and asynchronously instead of all at once synchronously, this means no more parser-based lock ups. The parser itself was also optimized by converting the majority of the switch statements (*O(n)*) to be instead driven by maps (*O(1)*).
 
 ## xterm compatibility
 
 ### Cursor style support
 
-The underline and bar cursor type are now supported, these can also be set using the CSI code to set the cursor style.
+The underline and bar cursor type are now supported, these can also be set using the CSI sequence to set the cursor style.
 
 ![Cursor styles](/images/2017-02-08-xtermjs-2.3/cursor-style.gif)
 
@@ -48,13 +48,13 @@ Big strides were made in the TypeScript conversion this release with approximate
 
 ## Other stuff
 
-Here are the other features added:
+Here are the other features added this release:
 
 - alt+left/right now skips words on Mac.
 - New `disableStdin` option that will completely disable all input handling.
 - New `tabStopWidth` option to customize the size of tabs.
 
-Check out the [GitHub release](https://github.com/sourcelair/xterm.js/releases/tag/2.3.0) for a complete list bug fixes and changes in this release.
+Check out the [GitHub release](https://github.com/sourcelair/xterm.js/releases/tag/2.3.0) for bug fixes and a complete list of changes in this release.
 
 ## A big thank you to our contributors!
 As always, this release would not have been possible without the contribution of our [**amazing contributors**](https://github.com/sourcelair/xterm.js/blob/2.3.0/AUTHORS).
