Fix grammar errors

--- a/_posts/2017-03-08-xtermjs-2.4.md
+++ b/_posts/2017-03-08-xtermjs-2.4.md
@@ -12,11 +12,11 @@ First off, let's start with what's new!
 
 ## 🆕  WebLinks
 
-Now xterm.js will detect and WebLinks in the terminal's buffer and convert them to `a` elements, which you can click to navigate to them (all link elements open in a new browser tab by default).
+Now xterm.js will detect and WebLinks in the terminal's buffer and convert them to `a` elements, which you can click to follow (all link elements open in a new browser tab by default).
 
 ![image](https://cloud.githubusercontent.com/assets/1188592/23652411/bff2c79c-0320-11e7-9df8-fd0eea93e646.png)
 
-For more information on this take a look a the corresponding Pull Request: #538.
+For more information on this take a look at the corresponding Pull Request: [#538](https://github.com/sourcelair/xterm.js/pull/538).
 
 ### ☣️  Experimental
 
