Update using addons page and fix several links

--- a/_posts/2016-10-03-xtermjs-2.0.md
+++ b/_posts/2016-10-03-xtermjs-2.0.md
@@ -6,7 +6,7 @@ categories: xtermjs update
 excerpt: We are excited to announce xterm.js 2.0! Rewritten in ES2015 with better scrolling and mouse support!
 ---
 
-We are excited to announce a new major update for xterm.js; **<a href="https://github.com/sourcelair/xterm.js" target="_blank">xterm.js 2.0</a>**! This new release includes the following great updates:
+We are excited to announce a new major update for xterm.js; **<a href="https://github.com/xtermjs/xterm.js" target="_blank">xterm.js 2.0</a>**! This new release includes the following great updates:
 
 1. Launch of official project website with [public API docs](/docs/) and [blog](/blog/)
 2. Migration of code base to ES2015 modules to make development much easier
@@ -41,6 +41,6 @@ Xterm.js 2.0 ships with a few great improvements:
 - Better mouse and mouse wheel support
 - Improved scrolling in oh-my-zsh
 
-As always, this release could not be made possible without the contribution of our [**amazing contributors**](https://github.com/sourcelair/xterm.js/blob/2.0.1/AUTHORS), so **THANK YOU** for making this happen!
+As always, this release could not be made possible without the contribution of our [**amazing contributors**](https://github.com/xtermjs/xterm.js/blob/2.0.1/AUTHORS), so **THANK YOU** for making this happen!
 
-Xterm.js 2.0 is available at [npm](http://npmjs.org/package/xterm), [bower](https://bower.io) and [GitHub Releases](https://github.com/sourcelair/xterm.js/releases/tag/2.0.1) as usual, so go get it and create amazing terminal apps now!
+Xterm.js 2.0 is available at [npm](http://npmjs.org/package/xterm), [bower](https://bower.io) and [GitHub Releases](https://github.com/xtermjs/xterm.js/releases/tag/2.0.1) as usual, so go get it and create amazing terminal apps now!
