--- a/_posts/2016-07-20-xtermjs-1-0.md
+++ b/_posts/2016-07-20-xtermjs-1-0.md
@@ -5,7 +5,7 @@ author_twitter: pariskasid
 categories: xtermjs update
 ---
 
-Today we are excited to announce the availability of **<a href="https://github.com/sourcelair/xterm.js" target="_blank">xterm.js 1.0</a>**! Xterm.js is the open source terminal component that lies behind [SourceLair](https://www.sourcelair.com)’s terminal since 2014.
+Today we are excited to announce the availability of **<a href="https://github.com/xtermjs/xterm.js" target="_blank">xterm.js 1.0</a>**! Xterm.js is the open source terminal component that lies behind [SourceLair](https://www.sourcelair.com)’s terminal since 2014.
 
 ## Great features
 
@@ -35,13 +35,13 @@ GitLab ported xterm.js to CoffeeScript to improve its terminal emulation. GitLab
 
 ## Download xterm.js
 
-Xterm.js 1.0 is available for download at <a href="https://npmjs.org/package/xterm" target="_blank">npm</a>,  <a href="https://libraries.io/bower/xterm.js" target="_blank">bower.io</a> and <a href="https://github.com/sourcelair/xterm.js/releases/tag/1.0.0" target="_blank">GitHub</a>.
+Xterm.js 1.0 is available for download at <a href="https://npmjs.org/package/xterm" target="_blank">npm</a>,  <a href="https://libraries.io/bower/xterm.js" target="_blank">bower.io</a> and <a href="https://github.com/xtermjs/xterm.js/releases/tag/1.0.0" target="_blank">GitHub</a>.
 
 ## Open Source
 
-As mentioned before xterm.js is an open source project and has received tons of valuable contributions from external contributors as well. We would love to receive your contributions also! If you would like to contribute the <a href="https://github.com/sourcelair/xterm.js#development-and-contribution" target="_blank">corresponding section of xterm.js’ README file</a> is the best place to start!
+As mentioned before xterm.js is an open source project and has received tons of valuable contributions from external contributors as well. We would love to receive your contributions also! If you would like to contribute the <a href="https://github.com/xtermjs/xterm.js#development-and-contribution" target="_blank">corresponding section of xterm.js’ README file</a> is the best place to start!
 
-If you are developing an application that could use a terminal (or terminal emulation), then xterm.js is for you. Feel free to <a href="https://github.com/sourcelair/xterm.js" target="_blank">visit xterm.js on GitHub</a> and ask any question about it or for some help in integrating it into your application.
+If you are developing an application that could use a terminal (or terminal emulation), then xterm.js is for you. Feel free to <a href="https://github.com/xtermjs/xterm.js" target="_blank">visit xterm.js on GitHub</a> and ask any question about it or for some help in integrating it into your application.
 
 Want to learn more about what xterm.js is capable of? Go to <a href="https://www.sourcelair.com">www.sourcelair.com</a>, create a project (or open an existing one) to test all of its features thoroughly in your project’s fully featured Linux terminal.
 
