--- a/_posts/2017-02-08-xtermjs-2.3.md
+++ b/_posts/2017-02-08-xtermjs-2.3.md
@@ -6,7 +6,7 @@ categories: xtermjs update
 excerpt: We are excited to announce xterm.js 2.3 with huge performance improvements and several other improvements.
 ---
 
-Today we are announcing **<a href="https://github.com/sourcelair/xterm.js" target="_blank">xterm.js 2.3</a>**! Below you can find some of the most important updates of this release.
+Today we are announcing **<a href="https://github.com/xtermjs/xterm.js" target="_blank">xterm.js 2.3</a>**! Below you can find some of the most important updates of this release.
 
 ## Performance
 The speed of xterm.js has been improved significantly this release due to optimizations in buffer management, the parser and the renderer. You should expect to see a responable framerate even when the commands generate a lot of output. Commands also typically run **around 5 times faster**.
@@ -14,7 +14,7 @@ The speed of xterm.js has been improved significantly this release due to optimi
 ![Performance demo](/images/2017-02-08-xtermjs-2.3/performance-demo.gif)
 
 ### Buffer management
-Previously when the terminal's buffer was filled it would be chopped in half to make room for more data, this is why there was some [quirky behavior](https://github.com/sourcelair/xterm.js/issues/361) with the scroll bar when a lot of output was processed. Now the buffer is managed in a circular list which makes it faster from both a memory and CPU perspective.
+Previously when the terminal's buffer was filled it would be chopped in half to make room for more data, this is why there was some [quirky behavior](https://github.com/xtermjs/xterm.js/issues/361) with the scroll bar when a lot of output was processed. Now the buffer is managed in a circular list which makes it faster from both a memory and CPU perspective.
 
 A bonus that came from this is that scroll events are no longer fired on every new line when the buffer is full since no scroll actually happens anymore since the viewport stays in the same position.
 
@@ -54,19 +54,19 @@ Here are the other features added this release:
 - New `disableStdin` option that will completely disable all input handling.
 - New `tabStopWidth` option to customize the size of tabs.
 
-Check out the [GitHub release](https://github.com/sourcelair/xterm.js/releases/tag/2.3.0) for bug fixes and a complete list of changes in this release.
+Check out the [GitHub release](https://github.com/xtermjs/xterm.js/releases/tag/2.3.0) for bug fixes and a complete list of changes in this release.
 
 ## A big thank you to our contributors!
-As always, this release would not have been possible without the contribution of our [**amazing contributors**](https://github.com/sourcelair/xterm.js/blob/2.3.0/AUTHORS).
+As always, this release would not have been possible without the contribution of our [**amazing contributors**](https://github.com/xtermjs/xterm.js/blob/2.3.0/AUTHORS).
 
 We would like to thank and credit all of external contributors for their work on xterm.js:
 
-- <a href="https://github.com/LucianBuzzo"> <img class="avatar mr-2" src="https://github.com/LucianBuzzo.png?s=32" /> LucianBuzzo</a> for fixing [an issue with setting a scroll region out of bounds of the terminal](https://github.com/sourcelair/xterm.js/pull/514)
-- <a href="https://github.com/vincentwoo"> <img class="avatar mr-2" src="https://github.com/vincentwoo.png?s=32" /> vincentwoo</a> for enabling [builds installed via npm](https://github.com/sourcelair/xterm.js/pull/502)
-- <a href="https://github.com/blink1073"> <img class="avatar mr-2" src="https://github.com/blink1073.png?s=32" /> blink1073</a> for ensuring [latest build files are included in releases](https://github.com/sourcelair/xterm.js/pull/419)
-- <a href="https://github.com/BobReid"> <img class="avatar mr-2" src="https://github.com/BobReid.png?s=32" /> BobReid</a> for making [alt+arrow skip words on macOS](https://github.com/sourcelair/xterm.js/pull/417)
-- <a href="https://github.com/saswatds"> <img class="avatar mr-2" src="https://github.com/saswatds.png?s=32" /> saswatds</a> for adding [a getting started section to the README](https://github.com/sourcelair/xterm.js/pull/415)
-- <a href="https://github.com/arcanis"> <img class="avatar mr-2" src="https://github.com/arcanis.png?s=32" /> arcanis</a> for making [the fit addon aware of the scroll bar](https://github.com/sourcelair/xterm.js/pull/400)
-- <a href="https://github.com/budde377"> <img class="avatar mr-2" src="https://github.com/budde377.png?s=32" /> budde377</a> for improving [how we bundle xterm.js](https://github.com/sourcelair/xterm.js/pull/398)
+- <a href="https://github.com/LucianBuzzo"> <img class="avatar mr-2" src="https://github.com/LucianBuzzo.png?s=32" /> LucianBuzzo</a> for fixing [an issue with setting a scroll region out of bounds of the terminal](https://github.com/xtermjs/xterm.js/pull/514)
+- <a href="https://github.com/vincentwoo"> <img class="avatar mr-2" src="https://github.com/vincentwoo.png?s=32" /> vincentwoo</a> for enabling [builds installed via npm](https://github.com/xtermjs/xterm.js/pull/502)
+- <a href="https://github.com/blink1073"> <img class="avatar mr-2" src="https://github.com/blink1073.png?s=32" /> blink1073</a> for ensuring [latest build files are included in releases](https://github.com/xtermjs/xterm.js/pull/419)
+- <a href="https://github.com/BobReid"> <img class="avatar mr-2" src="https://github.com/BobReid.png?s=32" /> BobReid</a> for making [alt+arrow skip words on macOS](https://github.com/xtermjs/xterm.js/pull/417)
+- <a href="https://github.com/saswatds"> <img class="avatar mr-2" src="https://github.com/saswatds.png?s=32" /> saswatds</a> for adding [a getting started section to the README](https://github.com/xtermjs/xterm.js/pull/415)
+- <a href="https://github.com/arcanis"> <img class="avatar mr-2" src="https://github.com/arcanis.png?s=32" /> arcanis</a> for making [the fit addon aware of the scroll bar](https://github.com/xtermjs/xterm.js/pull/400)
+- <a href="https://github.com/budde377"> <img class="avatar mr-2" src="https://github.com/budde377.png?s=32" /> budde377</a> for improving [how we bundle xterm.js](https://github.com/xtermjs/xterm.js/pull/398)
 
-Xterm.js 2.3 is available on [npm](http://npmjs.org/package/xterm), [bower](https://bower.io) and [GitHub Releases](https://github.com/sourcelair/xterm.js/releases/tag/2.3.0) as usual, so go get it and start creating amazing terminal apps now!
+Xterm.js 2.3 is available on [npm](http://npmjs.org/package/xterm), [bower](https://bower.io) and [GitHub Releases](https://github.com/xtermjs/xterm.js/releases/tag/2.3.0) as usual, so go get it and start creating amazing terminal apps now!
