--- a/_posts/2017-03-08-xtermjs-2.4.md
+++ b/_posts/2017-03-08-xtermjs-2.4.md
@@ -16,13 +16,13 @@ Now xterm.js will detect and WebLinks in the terminal's buffer and convert them 
 
 ![image](https://cloud.githubusercontent.com/assets/1188592/23652411/bff2c79c-0320-11e7-9df8-fd0eea93e646.png)
 
-For more information on this take a look at the corresponding Pull Request: [#538](https://github.com/sourcelair/xterm.js/pull/538).
+For more information on this take a look at the corresponding Pull Request: [#538](https://github.com/xtermjs/xterm.js/pull/538).
 
 ### ☣️  Experimental
 
 The new built-in WebLinks mechanism is not just for "web links". We exposed a few experimental APIs that let you match custom link formats (e.g. local file paths) to make this suit your needs better. For more information take a look at the corresponding Pull Request: #538.
 
-**TIP**: You can even register multiple link matchers and [assign priorities](https://github.com/sourcelair/xterm.js/pull/577).
+**TIP**: You can even register multiple link matchers and [assign priorities](https://github.com/xtermjs/xterm.js/pull/577).
 
 ## 🆕 Add-on API
 Xterm.js now has a public API for importing and using it's add-ons. Check it out at http://xtermjs.org/docs/.
@@ -41,10 +41,10 @@ Xterm.js now has a public API for importing and using it's add-ons. Check it out
 
 OK, that's  nothing special but now we can be easily aware about the testing coverage status of the repository and easily make sure to improve this rate as time passes: #565.
 
-Check out the [GitHub release](https://github.com/sourcelair/xterm.js/releases/tag/2.4.0) for tje complete list of changes in this release.
+Check out the [GitHub release](https://github.com/xtermjs/xterm.js/releases/tag/2.4.0) for tje complete list of changes in this release.
 
 ## A big thank you to our contributors!
-As always, this release would not have been possible without the contribution of our [**amazing contributors**](https://github.com/sourcelair/xterm.js/blob/2.4.0/AUTHORS).
+As always, this release would not have been possible without the contribution of our [**amazing contributors**](https://github.com/xtermjs/xterm.js/blob/2.4.0/AUTHORS).
 
 We would like to thank and credit all of external contributors for their work on xterm.js:
 
@@ -52,7 +52,7 @@ We would like to thank and credit all of external contributors for their work on
 - {% include contributor-credit.md
              username="AndrienkoAleksandr"
              description="fixing the Autowrap mode and removing an excess library from our setup"
-             link="https://github.com/sourcelair/xterm.js/pulls?utf8=%E2%9C%93&q=is%3Apr%20milestone%3A2.4.0%20is%3Amerged%20author%3AAndrienkoAleksandr%20" %}
+             link="https://github.com/xtermjs/xterm.js/pulls?utf8=%E2%9C%93&q=is%3Apr%20milestone%3A2.4.0%20is%3Amerged%20author%3AAndrienkoAleksandr%20" %}
 - {% include contributor-credit.md
              username="LucianBuzzo"
              description="stopping `fit` add-on from crashing when the parent does not exist" pr=544 %}
@@ -66,4 +66,4 @@ We would like to thank and credit all of external contributors for their work on
              username="coderaiser"
              description="fixing the demo on Windows" pr=584 %}
 
-Xterm.js 2.4 is available on [npm](http://npmjs.org/package/xterm), [bower](https://bower.io) and [GitHub Releases](https://github.com/sourcelair/xterm.js/releases/tag/2.4.0) as usual!
+Xterm.js 2.4 is available on [npm](http://npmjs.org/package/xterm), [bower](https://bower.io) and [GitHub Releases](https://github.com/xtermjs/xterm.js/releases/tag/2.4.0) as usual!
