fix: spelling error "tje"

--- a/_posts/2017-03-08-xtermjs-2.4.md
+++ b/_posts/2017-03-08-xtermjs-2.4.md
@@ -41,7 +41,7 @@ Xterm.js now has a public API for importing and using it's add-ons. Check it out
 
 OK, that's  nothing special but now we can be easily aware about the testing coverage status of the repository and easily make sure to improve this rate as time passes: #565.
 
-Check out the [GitHub release](https://github.com/xtermjs/xterm.js/releases/tag/2.4.0) for tje complete list of changes in this release.
+Check out the [GitHub release](https://github.com/xtermjs/xterm.js/releases/tag/2.4.0) for the complete list of changes in this release.
 
 ## A big thank you to our contributors!
 As always, this release would not have been possible without the contribution of our [**amazing contributors**](https://github.com/xtermjs/xterm.js/blob/2.4.0/AUTHORS).
